# biomni-mcp-server

./: .gitignore  CLAUDE.md  README.md  app.yaml  databricks.yml  main.py  pyproject.toml  requirements.txt
cluster_scripts/: init_genomics_tools.sh  init_glow.sh
docker/: Dockerfile.app-reference  Dockerfile.gpu
docs/: architecture.mmd  mermaid-config.json
notebooks/: tier2_glow_template.py  tier3_driver_template.py  tier4_gpu_template.py
runner/: pyproject.toml
runner/biomni_runner/: cli.py  file_tools.py  glow_tools.py
scripts/: build_gpu_image.sh  deploy.sh  setup_volumes.sh  upload_init_scripts.sh
src/: auth.py  config.py  file_io.py  job_runner.py  tool_wrapper.py  validation.py
src/tools/: __init__.py  file_management.py  job_management.py  tier1_molecular.py  tier2_glow_pipe.py  tier3_genomics.py  tier3_microbiology.py  tier4_gpu.py
tests/: conftest.py  test_file_io.py  test_job_runner.py  test_tier1_tools.py  test_tier2_glow.py  test_tier3_genomics.py  test_tier4_gpu.py  test_tool_registration.py  test_validation.py
tests/integration/: test_mcp_e2e.py
